docs/plans/archive/v2/PRODUCT_REQUIREMENTS.md
# 車内作業型・戦車対戦ゲーム
## 独自作品の要件定義・実装計画書

**第2版 / 2026年9月8日 / 設計提案・未実装**

> 車内で資材を運び、仲間へ仕事を任せ、外の砲撃を読み、必要なら敵車へ乗り込む。これらの判断が同じ時間の中でつながる、独自の戦車対戦ゲームを作る。

本書は、前版の「原作の戦闘を数値まで一致させる計画」を置き換える。参考にする範囲は、ユーザーが指定した**2作目の戦車戦闘にある一般的な遊びの関係**だけとする。船バトル、探索、物語、既存キャラクターの収録は対象外である。

完成条件は、原作への一致ではない。**運搬・迎撃・役割分担・侵入・逆転が機能し、独自の操作・内容・表現で一つのゲームとして成立すること**とする。名称や画像だけを取り替えた移植は目標にしない。

「車内作業型・戦車対戦ゲーム」は説明用の呼び方で、正式な作品名ではない。本文のロボット案、人数、弾種、数値、画面配置は本書の提案であり、ユーザーが個別に承認した事実はない。以後の初期実装では仮採用し、変更理由と検査を残して調整する。

本書は制作上のリスクを減らすための方針を含むが、非侵害を保証する法律意見ではない。個別の著作権・商標・特許の調査や、完成素材の権利確認は未実施である。

## 1. 前版から何を変更するか

前版にあった原作数値の照合、全資材・全仲間・全戦車の収録、挙動の完全一致という条件を撤回する。原作で未測定だった速度や補給方式を調べ終わるまで、制作を待つ必要もなくなる。新作の目的から自分たちで決め、試遊で確かめる。

|前版の扱い|今回の扱い|
|---|---|
|原作の正しい値を探し、一致させる|新作で判断しやすい値を決め、検査する|
|既存の資材・仲間を目録に沿って収録する|必要な戦術から、独自のケースと補助員を設計する|
|既存の車内配置や操作を測って再現する|スマートフォン上の移動距離と読みやすさから新規設計する|
|既存の体当たり・積み上げ・合体を再現する|2枠の運搬、短距離突進、用途の選択を組み合わせる|
|耐久0後にエンジンへ直接攻撃する|装甲を破り、離れた2か所の制御盤を作業で停止させる|
|船バトルの差分も保持する|本計画から完全に外す|
|対戦を含めて原作の戦闘全体を完成させる|まず独自の一人用を完成させ、通信対戦は別計画にする|

旧版の資材候補60件、仲間名の照合表、原作数値の検証項目は、新作の実装入力に使わない。今回の配布一式にも収録しない。既存の調査履歴をなかったことにはせず、参考資料の保管とゲームに使うデータを分ける。

## 2. 権利に配慮するための制作方針

### 2.1 仕組みと表現を分ける

文化庁は、アイデアや単なる事実・データと、著作物として保護される表現を分けて説明している。ただし、具体的にどこまでがアイデアで、どこからが表現なのかは、対象の内容によって判断が必要になる。[L01][L02]

本書では、「資材を運ぶことが攻撃の準備になる」「攻撃用の弾を防御にも使う」「味方へ作業を任せて別の仕事をする」といった一般化した関係を設計の出発点にする。特定作品の画面、個別のキャラクター、文章、音、場面の組み立てをそのまま再現しない。

**名称を変えた、色を変えた、数値を少し変えた、というだけで問題がなくなるとは扱わない。** 逆に、2つの砲撃経路や運搬上限のような個別の一般的仕組みを、それだけで必ず保護されるものとも断定しない。今回の変更は、法的な安全率を計算するものではなく、独自の作品を設計するための判断である。

### 2.2 制作時に採らない方法

既存ゲームから抽出した画像、音声、効果音、フォント、コード、地図、説明文は使わない。画面写真を下敷きにした配置の写し取り、既存キャラクターの輪郭や顔だけを少し変更する制作、アイテム表を名称だけ変えて取り込む制作も行わない。

ゲーム映像や音楽、キャラクター画像は権利確認が必要な対象であり、投稿ガイドラインで動画利用が許されることと、別のゲームに素材を組み込めることは分けて確認する。[L03]

AIへ素材を作らせる場合も、既存作品のキャラクターや画面を再現する依頼はしない。本書の材質、機能、形状、動きの説明から作成し、出力結果を確認する。AIを使ったことだけを、既存の創作的表現との関係を調べなくてよい理由にはしない。[L02]

### 2.3 著作権だけで確認を終えない

作品名やロゴは、似た名称を含めた商標の確認対象とする。特許庁には、読み方が類似する商標を調べる手順がある。[L04] ソフトウエアに関する特許は別の確認事項であり、本書では該当特許の有無や有効性を調査済みとはしない。[L05]

公開ページや紹介文で、既存作品の公式な続編・移植・関連作だと誤認させる表示を避ける。周知・著名な表示などには、不正競争防止法上の問題もあり得るため、著作権だけで結論を出さない。[L06]

疑義が残る名称、画面、音、技術が見つかった場合は、変更または必要な専門家への確認を行う。今回の資料だけで「権利上の問題が一切ない」とは判断できない。権利確認で止めるのは該当する公開・素材使用であり、独自の仮素材による基礎実装まで一律に止める必要はない。

## 3. 企画の中心を定義する

### 3.1 一文で説明する

**作業ロボットの班長となり、装甲車内の資材を攻撃と修理へ振り分け、補助員と仕事を分担しながら、相手の車両を直接制圧するアクション戦術ゲーム。**

戦闘中に戦車そのものを操縦して移動するゲームにはしない。戦車は交戦位置に停車し、プレイヤーはその内部と連絡区画を動き回る。砲撃の強さだけでなく、自分がどの仕事を担当するかを選べることを中心にする。

### 3.2 必ず成立させる五つの判断

|判断|プレイヤーが選ぶこと|成立を確認する方法|
|---|---|---|
|運搬|近い軽いケースを運ぶか、遠い重いケースを運ぶか|一方だけが常に得になる状態を避け、運搬時間と攻撃成果を比較する|
|迎撃|手元の弾を今防御へ使うか、後の攻撃へ残すか|同じケースが発射時刻と経路で違う成果を出す場面を用意する|
|役割分担|自分で装填するか、仲間に任せて修理・侵入へ回るか|主人公が装填し続ける以外の作戦でも勝利できる|
|侵入|外から攻撃するか、中の設備と作業員を妨げるか|侵入によって実際の補給・装填・防衛が変化する|
|逆転|装甲を失った後に防衛するか、敵車の制圧を急ぐか|片側だけ装甲0の状態からでも、条件次第で逆転できる|

これらは法的に保護対象外だと個別認定した一覧ではなく、新作で成立させたい体験の要件である。表現と実装は後述の独自案で組み立てる。

### 3.3 新作としての特徴

見た目だけでなく、仕事の選び方も作り直す。体を伸ばす生き物ではなく、車輪付きの作業ロボットが二つの荷物枠を使う。ケースは積み上げず、手元の左右枠から使う物を選ぶ。

砲撃用ケースは、修理装置に渡せば装甲や設備を直すためにも使える。どの種類でも1個を消費するため、強い弾を修理へ回すのは損にもなり得る。修理できる装甲の総量は制限する。

勝利はエンジンへの一撃ではなく、離れた二つの制御盤を短時間ずつ操作して決める。装甲を破った側にも現場作業が残り、守る側は作業員を押し退けて時間を作れる。

## 4. 初期版の範囲と、後で扱うもの

初期版は、プレイヤー1人と自動で動く補助員2体の陣営が、同じ人数の敵陣営と戦う一人用とする。編成、練習、1戦、結果、再戦までを含む。全数は原作の登場数ではなく、新作に必要な内容から決める。

|対象|初期版の提案|完成の扱い|
|---|---|---|
|戦闘用ケース|8種類|すべて固有の用途と検査を持つ|
|補助員の型|3種類から2体選択|見た目ではなく判断傾向が異なる。同型2体も選べる|
|車内の配置|3種類|移動距離、設備配置、防衛の仕方が異なる|
|通常の対戦設定|6種類|砲撃、迎撃、侵入など敵の重点が異なる|
|練習|3場面|運搬砲撃、迎撃、侵入制圧を順に学ぶ|
|記録|設定、進行、直前の戦闘記録|個人のブラウザ内で扱う。外部ランキングは含めない|

原作の探索、町、ストーリー、収集、魔法、固有の合体、キャラクター発射、船、既存の大会設定は作らない。最初の版では、3D化、対人通信、課金、ログイン、ランキング、日替わり出題も必須にしない。

通信対戦を後で追加できるよう入力と状態を分けるが、対戦サーバーや有料サービスは今回契約しない。通信対戦の仕様は初期版の完成後に別途定義する。

## 5. 一戦の進み方と勝敗

### 5.1 開始から終了まで

編成画面で車体、補助員2体、補給するケース4種と配分を選ぶ。最初は説明付きの標準編成を選択済みにし、細かな設定をしなくても開始できる。

戦闘では両陣営が同時に補給・運搬・装填を行う。車外では砲弾が進み、同じ経路の敵弾と接触すると互いの迎撃耐久が減る。敵車へ届いた弾は装甲へ損傷を与える。プレイヤーはどの時点でも連絡区画を通って相手車内へ侵入できる。

装甲が0になると、その車両の二つの制御盤を敵が操作できるようになる。敵が両方の操作を完了させると、その車両の陣営が敗北する。プレイヤーの作業員が倒れても、それだけで敗北にはせず、時間後に自車へ復帰する。

### 5.2 車両ごとの状態

|状態|装甲修理|砲撃と補給|敵による制御盤操作|
|---|---|---|---|
|装甲が残っている|予算の範囲内で可能|通常通り動く|できない|
|装甲が0で制御盤が開放された|できない|設備が使える限り続く|できる|
|制御盤が一つ停止した|できない|設備が使える限り続く|残り一つを操作できる|
|制御盤が二つ停止した|終了|戦闘の確定後に止める|終了|

装甲0は不可逆とし、後から装甲を回復して制御盤を閉じる処理は初期版では設けない。装甲0後も設備修理はできる。両車両の装甲が同時に0になる場合も、各車両の状態を独立に扱う。

### 5.3 制御盤の操作条件

攻撃側の生存している作業員が、荷物を持たず、対象から0.8単位以内で「扱う」を2.5秒続ける。主人公・補助員・敵班長・敵補助員は同じ条件を使う。通常の突進や砲撃では、制御盤の作業を代用できない。

移動、被弾、入力解除、戦闘不能でその盤の未完了作業を0へ戻す。いったん停止した盤は復旧しない。一つの盤には一人だけが作業でき、二人が重なっても速度は上げない。別々の盤なら同時に進められる。

### 5.4 時間切れと同時決着

一戦の上限を420秒の初期値にする。これは原作の数値ではない。通常の試遊では180〜360秒程度に収まることを調整目標とし、長引く原因を記録する。

両陣営の制御盤完了を、同じ時間更新の最後にまとめて確定する。同じ更新で両陣営が両方の盤を止めた場合は引き分けとする。時間上限の更新では、制圧による勝敗を先に判定し、成立しなかった場合だけ時間切れ引き分けとする。装甲残量による自動勝利は設けない。

## 6. 移動、運搬、近距離アクション

### 6.1 操作を原作と切り離す

床面上を連続して移動し、斜め移動を速くしない。最初の案ではジャンプ、浮遊、体を伸ばす操作は採らない。上下の段差や落下死も置かず、仕事のための移動と戦況判断に集中させる。

基本操作は、左側の方向入力、右側の「扱う」、短距離の「突進」、荷物2枠の選択にする。装填口の経路と補助員の命令は、独立した小さな表示から変える。すべてを一つの攻撃ボタンへ詰め込まない。

### 6.2 荷物の上限

ケースは2個まで持てるが、重量の合計は3までとする。重量1を2個、または重量1と重量2を1個ずつ持てる。重量2を2個は持てない。重量3のときだけ移動速度を通常の85%にする。

荷物は左右2枠で表示し、選択した枠を使う。空き枠に近くのケースを拾い、対象装置へ渡し、必要なら足元前方へ置ける。入れ替えを上下の積み順や自動合体に結び付けない。床のケースは歩行を完全には塞がず、荷物だけで永久に通路封鎖できない。

### 6.3 「扱う」の誤操作を防ぐ

ボタンの近くへ「拾う」「装填する」「修理する」「停止させる」「置く」の実行内容を表示する。対象物も輪郭で示す。押し始めに対象を固定し、その押下の途中で違う行動へ切り替えない。

有効な設備があり、必要な荷物と条件が揃う場合は設備を優先する。設備操作ができなければ、空き枠があるときは近くのケースを拾う候補とし、それ以外は選択中のケースを置く候補にする。複数候補は距離、向き、物体番号の順で決める。境界で表示が頻繁に切り替わらないよう、選択中の候補を維持する小さな余裕を設ける。

### 6.4 突進と被弾

突進は短い距離を移動し、最初に当たった敵作業員へ体力1の損傷と押し退けを与える。設備へは10の損傷を与える。一回の突進で同じ対象へ繰り返し当たらない。突進に無敵時間は付けず、壁を貫通しない。

作業員の体力は4を初期値とする。被弾すると選択中の荷物1個を落とし、0.6秒間は追加損傷を受けない。体力0ではすべての荷物を落とし、5秒後に自車の復帰地点へ戻る。荷物は消さず、相手も拾える。

復帰後1秒は損傷・押し退けを受けない代わりに、拾う・装填・修理・制圧・攻撃ができない。復帰地点には独自に広い退避床を設け、身体の重なりによる閉じ込めを防ぐ。

## 7. 補給、装填、迎撃

### 7.1 補給は独自の配分方式にする

8種類から4種類を選び、各種類に1〜3の配分を与え、合計を8にする。たとえば標準3・重量2・防護2・高速1である。これは持ち物の総数ではなく、補給の内訳を決める数字である。

8個分の内訳を毎回並べ替え、順番に供給する。一巡したら再び同じ内訳を並べ替える。乱数の開始値を記録し、検査時には同じ順番を再現できるようにする。運搬しないまま補給地点を塞いだ場合は、その地点の補給を待機させ、順番を消費しない。

自車の次の2個は予告で見せる。敵の補給予定は見せない。敵の判断処理にも、画面に出していないプレイヤーの未来入力や補給順を参照させない。

### 7.2 補給地点と上限

補給口を2か所置き、各3.5秒を初期間隔にする。開始直後の待ち時間は0.5秒と2.25秒でずらす。床にケースが16個ある部屋では新規補給を止める。16個は補給の停止基準であり、被弾して落とした荷物まで消すための上限ではない。落下で一時的に16個を超えても保持し、運搬や消費によって減るまで補給を待つ。供給元ごとの未消費ケース由来のグループ数は48を上限とする。分割した子弾の集まりは、元ケース1個分として数える。

上限へ達した場合は新規供給を止め、古いケースや飛行中の弾を勝手に消さない。飛行物体数の上限で発射できない場合も、待ち列の先頭を保持して空きを待つ。補給再開時にも、待った時間の分をまとめて出さない。複数の補給口が同時に動く場合は、補給口番号の順で内訳を消費する。

### 7.3 一つの装填口、二つの経路

車内の一つの装填口へケースを渡し、直通か迂回を選ぶ。直通は短い経路、迂回は長い経路として、外側の戦況表示でも別々の線にする。重力による砲物線を原作風に再現するのではなく、読みやすい戦術表示として扱う。

待ち列は共通で2個、発射間隔は0.8秒を初期値とする。経路は投入時に記録する。後から切り替えても、投入済みの弾の経路は変わらない。満杯の場合はケースを作業員の手元へ残し、投入に成功した表示を出さない。

### 7.4 弾同士の接触

同じ経路を逆向きに進む弾だけが接触する。異なる経路の弾と同じ陣営の弾は衝突しない。接触すると双方の迎撃耐久を同時に1減らし、0になった弾を消す。戦車へ与える損傷量は、この計算に使わない。

同じ二つの弾が重なっている間に、毎更新ぶつかり続けたことにはしない。一回の接触を記録し、明確に離れるまで同じ組を再処理しない。高速の弾は、前回位置から今回位置までの区間を使って接触を調べる。

敵車まで届いた弾は、残った迎撃耐久にかかわらず定義された損傷を1回だけ与えて消える。装甲0後も損傷イベントは記録するが、制御盤停止には変換しない。

## 8. 独自のケース8種と修理

以下の名称は機能を説明する仮の名称であり、正式名称ではない。性能は独自の初期提案で、未試遊である。既存アイテム表からの名前替えや数値転記はしていない。

|ケース|重量|装甲損傷|迎撃耐久|飛行速度|用途|
|---|---:|---:|---:|---:|---|
|標準弾|1|14|1|20|運搬・迎撃・砲撃の基準にする|
|重量弾|2|30|2|12|遅さと運搬負担に対して威力を得る|
|防護板|1|0|3|9|複数の敵弾を受け止める|
|高速杭|1|8|1|28|素早い牽制と迎撃に使う|
|分割弾|1|12|1|16|中央を過ぎると損傷4の小弾3個へ分かれる|
|補給妨害|1|6|1|18|命中した車両の補給を6秒止める|
|貫通杭|2|18|3|10|迎撃されても残りやすくする|
|通路妨害|1|4|1|14|相手の侵入口付近の移動を4秒遅くする|

速度は戦況表示用の経路単位/秒で、車内の歩行単位とは別である。直通の長さは120、迂回は156とし、標準弾なら直通6秒、迂回7.8秒になる。画面の大きさで飛行時間は変えない。

### 8.1 特殊効果の境界を決める

分割弾は同じ経路上へ3個を間隔2で並べる。子弾は再分割しない。合計の装甲損傷は12のままである。分割地点で敵弾へ触れた場合は接触を先に処理し、生き残った場合だけ分割する。全体の飛行物体上限96のため3個分を作れない場合は、親弾のまま進み、その戦闘では再分割しない。これは両陣営共通の公開ルールとする。

補給妨害は砲撃や修理を止めない。6秒の停止中は延長せず、終了後4秒は同効果を受けない。短い弾の連打で補給が永久に止まる状態を避ける。設備破壊と補給妨害は別の停止理由を持ち、両方が解消するまで補給を再開しない。

通路妨害は、車内データで指定した侵入口の床に半径1の領域を作る。領域では敵味方を問わず速度を65%にする。1車両1か所だけとし、再命中では古い領域を置き換える。床の外へ生成しない。重い荷物の減速と重なるときは、85%と65%を掛け合わせる。

### 8.2 同じケースを修理へ回す

どのケースも、自車の装甲修理へ1個消費できる。1.5秒の作業で装甲12を回復し、一戦の累計回復量は96までとする。最大値までの差や残り予算が12未満ならその分だけ回復するが、ケースは1個を使う。回復できない場合は受け取らない。

修理を始めるとケースをその作業員の予約状態に置く。被弾や中断なら消費しない。完了時に回復と消費を同じ処理で成立させる。装甲が同じ更新で0になる損傷を受ける場合は損傷を先に判定し、装甲0が確定した車両への装甲修理は失敗とする。

設備修理は別に2秒の作業とケース1個を必要とし、装甲回復予算を使わない。装甲0後も設備を直せる。ケース1個を発射・装甲修理・設備修理の複数用途へ同時に使わない。

## 9. 侵入と、独自の車内配置

### 9.1 侵入経路

両戦車は側面ハッチと小さな連絡区画でつながる。戦闘開始時から往復でき、装甲0になった瞬間に経路を出現させる方式にはしない。車内から制御盤へ瞬間移動する経路も置かない。

連絡区画では近距離の押し合いはできるが、初期版の砲撃は作業員へ直接命中させない。車外の弾と車内の人物を、同じ物理空間に見せかけない。現在地と入口までの距離を戦況表示に残す。

### 9.2 配置は白紙から作る

基本床面を12×8単位程度とし、ケース、設備、作業員の大きさから通路を決める。床面の区切りは地図を作るために使い、プレイヤーの移動をマス単位にはしない。

|配置案|特徴|必ず確認すること|
|---|---|---|
|中央作業型|装填口を中央、補給を左右に置く|運搬を学びやすく、入口防衛も残る|
|分散補給型|補給口の距離を離し、中央に遮蔽物を置く|一つの最短往復だけで全作業が済まない|
|分岐通路型|入口から装填側と修理側へ分かれる|侵入者を防げるが、永久封鎖はできない|

具体的な座標図はR1で新規作成し、床面と動線の検査を加える。既存ゲームの画面から座標を写し取らない。各配置で入口、補給口2個、装填口、修理場所、復帰場所、制御盤2個への経路が存在することを確認する。戦車の名前や外観だけを変えて3配置完成とは数えない。

### 9.3 設備への妨害

侵入者は補給駆動部と装填装置を攻撃できる。設備耐久は60を初期値とする。耐久0で8秒間停止し、自動復旧する。修理によって早く戻すこともできる。制御盤、修理場所、復帰場所は通常攻撃で壊れない。

補給停止中は残り待ち時間を凍結する。装填装置の停止中は待ち列を保持し、順序も変えず、発射しない。装置が復旧した更新より後に、通常の発射間隔で再開する。停止時間分の一斉射撃はしない。

## 10. 補助員と敵の要件

### 10.1 三つの補助型

|補助型|優先する判断|限界|
|---|---|---|
|運搬型|近いケースを確保し、補給予告に合わせて運ぶ|精密な迎撃時刻の調整は得意にしない|
|迎撃型|見えている敵弾に対して経路と発射時刻を選ぶ|未来の発射や相手の補給順は読まない|
|整備型|装甲・設備の状態を見て修理か防衛を選ぶ|回復予算や手持ちケースの制約を受ける|

基礎体力・移動・運搬制限は同じにして、初期版では装備や成長値の別管理を増やさない。個体差は判断の優先順位から作り、原作の仲間を一体ずつ置き換えない。

### 10.2 命令と仕事の選択

基本命令は「砲撃」「防衛」「侵入」の3種類にする。命令は担当範囲を変え、補助型はその中での仕事の優先順位を変える。侵入命令なら、運搬型でも敵ケースを奪い、迎撃型でも敵の装填を妨げ、装甲0なら全型が制御盤作業を選べる。

作業の流れは、対象を選ぶ、予約する、移動する、扱う、作業を終える、次を選ぶ、とする。被弾、対象消失、命令変更、戦闘不能で中断できる。予約は1秒を初期期限にし、有効な移動中だけ更新する。2秒進めない場合は経路と対象を選び直す。

### 10.3 敵だけ有利な処理を作らない

敵班長と補助員も、同じケース、重量、補給間隔、待ち列、被弾、復帰、制御盤条件を使う。難易度は判断の待ち時間と作戦で変える。初期候補は易しい600ミリ秒、標準300ミリ秒、難しい180ミリ秒であり、正確な調整は試遊後に行う。

敵が弾を持たずに撃つ、装置停止中に撃つ、画面外から補給する、プレイヤーの入力を先読みする処理は設けない。見えない車内でも現物の運搬を続ける。

### 10.4 六つの通常対戦

対戦設定は、標準、重量砲撃、迎撃重視、侵入重視、修理防衛、混合作戦の6つを作る。各設定には独自の編成、補給内訳、車内配置、命令傾向を付ける。装甲だけを増やして別の敵として数えない。

## 11. iPhoneの画面と操作

### 11.1 二つの戦況を見失わせない

縦画面では上側に小さな戦況帯、中央に車内、下側に操作領域を置く。戦況帯には2経路の砲弾、両陣営の装甲、制御盤の停止数を表示する。車内だけを大きくするために、砲撃を見えなくしない。

画面幅360、390、402、430 CSSピクセルを自動検査の候補にする。切り欠きや下端の操作領域を避け、重要操作は48 CSSピクセル以上を初期条件にする。これは今回の設計値であり、原作やすべての端末への適合を保証する数値ではない。

横画面は車内と戦況帯を横並びへ変えるが、ルール、移動量、弾道の時間は変えない。画面上の座標と、戦闘を計算する座標は分ける。

### 11.2 指の役割を固定する

移動を始めた指は、操作領域の外へ出ても移動担当のまま追跡する。別の指は扱う・突進に使い、指が交差しても担当を入れ替えない。指が離れた場合や操作が中断された場合は、その指に対応する入力を解除する。ブラウザのPointer eventsを使って識別と中断を扱う。[T03]

ゲーム面での文字選択やブラウザの誤反応を抑える一方、説明文や設定画面まで一律に操作不能にはしない。操作対象を指で直接細かく狙う方式ではなく、近接対象の強調表示と大きなボタンを使う。

### 11.3 一時停止と復帰

一人用では、明示的な一時停止と、画面非表示時の停止を認める。画面非表示はPage Visibility APIで検出する。[T04] 非表示になった際には、移動、突進、作業中の入力を解除する。

復帰時は停止したまま再開ボタンを出す。非表示中の時間を戦闘へ一括適用しない。音も有効状態を確認してから再開する。将来の対人戦では別の中断規則が必要になるため、この一人用処理をそのまま通信へ流用しない。

## 12. 見た目、音、説明の独自設計

外観の初期案は、角張った工業用の装甲車と、車輪台座・二本の作業アームを持つロボットにする。車体の顔や既存の生き物の輪郭をモチーフにはしない。ケースは素材や用途が判別できる工業用容器とし、果物・魔法道具・既存の盾などの一覧を新名称に置き換える方法を採らない。

車内は真上に近い二次元表示、車外は二つの経路が見える独自の戦況表示とする。原作の二画面の枠、文字位置、配色、文字装飾をまとめて写さない。色だけで陣営や効果を区別せず、記号・形・短い日本語も使う。

動きには、アームが荷物を掴む、装填口の仕切りが閉じる、車体の砲撃装置が反動で動く、制御盤の状態が変わる、という独自の理由を持たせる。操作結果がすぐ見えることを優先し、爆発や揺れで状況を長く隠さない。

音は新規作成または用途に合う許諾を確認した素材を使う。拾得、投入、発射、迎撃、修理、設備停止、制御盤危険、勝敗の出来事ごとに整理する。既存曲の旋律を少し変えた音楽や、既存効果音を加工したものは制作指示に含めない。消音でも同じ状況を読み取れるようにする。

## 13. 実装の構成

### 13.1 技術の選び方

ルールをTypeScript、表示をPhaser、公開用ファイルの組み立てをViteで作る案を置く。公式にTypeScriptとViteのテンプレートがあるが、実装時点で内容を再確認し、古い紹介記事の版番号をそのまま採用しない。[T01] 入力機能にも公式資料がある。[T02]

初期版のルール計算は表示機能から切り離す。画面上の絵同士が接触したことや、アニメーションが終了したことだけで、損傷や勝敗を決めない。物理機能を使う場合も、どちらの処理が正しい状態を持つかを一つにする。

### 13.2 同じ記録を再生できる構成

ゲームを一定の細かい時間刻みで進める方式を使う。これを固定時間更新と呼ぶ。初期案では1秒60回とし、時間は整数の更新回数で保存する。車内座標は1単位を1000の整数へ分け、端末の画面幅を計算へ混ぜない。

同じ開始状態、ルール版、乱数の開始値、操作順なら、少なくとも同じ実行条件で同じ結果が得られるようにする。表示用の乱数は補給用と分ける。異なるブラウザ間での完全一致は別途検査し、乱数開始値を揃えただけで保証しない。

### 13.3 同時処理の順番

一更新は、入力の取り込み、命令と対象選択、移動と投下、接触と損傷、装甲0や戦闘不能の確定、継続作業の完了、設備復帰、補給と発射、分割などの効果、勝敗確定の順とする。継続作業はその更新で被弾・移動した場合には完了しない。

飛行中の弾の接触は移動区間の接触時刻順で処理し、同時刻は物体番号で並べる。両陣営の制御盤の完了は先にすべて集めてから勝敗を決め、配列の先頭の陣営だけが有利になることを防ぐ。

新規発射と新規分割の子弾は、その更新では移動せず次の更新から進む。設備を同じ更新で修復した場合も、その更新中に蓄積分を発射しない。これらは独自の境界規則として検査で固定する。

### 13.4 一つの物体は一か所に置く

ケースの状態は、床、所持、作業予約付き所持、砲撃待ち列、飛行、消費済みのいずれかにする。物体番号、供給元、現在の陣営、持ち主を分けて記録する。敵が奪ったケースは、次に装填した車両の陣営から発射する。分割した子弾には新しい物体番号と共通の元ケース番号を付け、すべての子弾が消えてから元ケース由来のグループを消費済みにする。

二人による同時拾得、修理中の被弾、装填口満杯、設備停止、分割生成、復帰時の荷物落下などで複製しない。物体が消える場合は、命中、迎撃、修理消費などの理由を必ず記録する。

### 13.5 ファイル構成案

```text
docs/
  PRODUCT_REQUIREMENTS.md
  DESIGN_DECISIONS.md
  RIGHTS_AND_ASSETS.md
  TEST_REPORT.md
src/
  domain/          ルール、物体状態、勝敗
  simulation/      時計、入力順、乱数、接触
  logistics/       補給、運搬、装填、修理
  artillery/       経路、迎撃、特殊効果
  actors/          移動、突進、被弾、復帰
  crew/            命令、作業選択、経路
  content/         独自ケース、配置、対戦設定
  presentation/    車内、戦況帯、音、演出
  input/           指の識別、入力解除
  replay/          記録、再生、状態比較
tests/
  rules/           数値と境界条件
  scenarios/       戦況を使った検査
  browser/         画面、操作、中断
  performance/     描画負荷と長時間
```

権利関係の参考資料は、実行時に読み込む`src/content/`へ置かない。旧版の候補データや原作比較用のデータを、本番ビルドの素材へ混ぜない。

## 14. 要件番号と検査をつなぐ

付属の`REQUIREMENTS.json`に42件の要件を収録し、各要件へ完成条件と担当工程を付ける。`ACCEPTANCE_TESTS.json`には、実施する検査の前提、操作、期待結果を記録する。いずれも検査結果ではなく計画である。

|検査場面|期待する結果|対応要件|
|---|---|---|
|同じケースを二人が拾う|一人だけが取得し、他方は再選択する|REQ-24・31|
|重量2をすでに持っている|追加の重量2を持てない。重量1なら持てる|REQ-05|
|待ち列が満杯で投入する|ケースは手元に残る|REQ-10|
|防護板と重量弾が接触する|双方の迎撃耐久が1減る。威力の大小では決めない|REQ-09|
|装甲を0にする|砲撃は続き、制御盤だけが操作可能になる|REQ-17|
|盤の作業完了と同じ更新で被弾する|その盤の未完了作業は中断する|REQ-19|
|両陣営が同じ更新で2盤を停止する|引き分けになる|REQ-20|
|補給駆動部を止める|次のケースが出ず、復旧後にも一斉補給しない|REQ-15・16|
|修理途中に戦闘不能になる|修理は未成立、ケースは床へ落ちる|REQ-12・21|
|主人公が敵車へ移動する|仲間が自車で仕事を続ける|REQ-03・22|
|画面を隠して戻る|停止したまま、入力が解除されている|REQ-29|
|描画だけ軽くして同じ記録を再生する|補給、接触、損傷、勝敗が一致する|REQ-30・34|

弾8種の全組み合わせは、順序を区別して64通りを基礎検査する。経路、時差、残り迎撃耐久、分割前後、装甲0前後は追加条件として扱う。64件だけで全挙動を網羅したとはしない。

## 15. 試遊と品質の合格条件

### 15.1 原作への一致ではなく、判断が機能するかを見る

原作未経験者を含む5人程度の小規模な試遊を初期候補にする。これは統計的な保証ではない。練習後に、4人以上が「運ぶと撃てる」「弾で弾を防げる」「装甲0だけでは勝てない」を説明し、実行できることを目安にする。達しなければ、まず表示と説明を直す。

標準編成で20戦程度を観察し、待つだけの時間、作業の取り合い、同じ行動だけで勝てる状態、時間切れ、修理だけの長期化を記録する。自動操作は偏りを探す補助とし、人が楽しいと感じるかの代わりにはしない。

### 15.2 戦術が残っているかを確認する

同じ戦況から「砲撃に専念」「仲間へ任せて侵入」「守りながら修理」の選択を比較する。すべての条件で同じ選択が最善なら、補給位置、移動時間、弾の性能、命令を見直す。

片側の装甲だけが0の場面を保存し、防衛から敵車の制圧へつなぐ経路が残っているかを見る。毎回逆転できる必要はないが、操作しても結果を変えられない待ち時間だけになる設計は避ける。

### 15.3 実機と自動検査を分ける

Playwrightで画面幅、タッチ条件、ブラウザ動作を検査する。ただし、機器の条件を模擬する機能とiPhone実機は同じではない。[T05] 最終確認はiPhone 17 Pro Safariで、縦横、音の復帰、画面端、長押し、複数指、アプリ切り替えを行う。

描画は通常60回/秒を目標とするが、実測前に達成済みとは書かない。通常場面の描画時間の95%が20ミリ秒以内、負荷場面では33.3ミリ秒以内、入力から見た目の反応の95%が100ミリ秒以内を初期の計測目標とする。測定できない値は未計測とし、体感だけで合格にしない。

軽量化では影、背景、装飾、粒子を先に減らす。弾の現物数、補給間隔、仲間の判断を端末ごとに変えない。20戦連続の再戦後も、前戦の入力、タイマー、音、物体が残らないことを確認する。

## 16. 実装は六つのまとまりで進める

変更内容をレビューして取り込む単位を、プルリクエストと呼ぶ。六つの段階を基本にするが、必ず六回で終わる工数保証ではない。大きくなった段階は検査できる量へ分け、完了した要件番号を残す。

|段階|実装するもの|完了条件|
|---|---|---|
|R1 設計と基礎|新要件、独自配置案、時計、入力記録、物体の所在、検査用画面|原作候補を使わず、同じ入力を再生できる|
|R2 一戦を通す|移動、2枠運搬、4ケース、2経路、迎撃、侵入、装甲0、2盤制圧|スマートフォンで開始から決着まで遊べる|
|R3 車内の判断|補給配分、修理、突進、被弾、復帰、奪取、設備停止|運搬・攻撃・修理・妨害が同じ物体の制約で動く|
|R4 仲間と戦術|補助型3種、命令、敵、残り4ケース、特殊効果|自分が装填し続けなくても作戦を成立させられる|
|R5 遊べる製品へ整える|車内3配置、対戦6設定、練習3場面、独自表現、結果、再戦|内容目録と実機確認を満たす|
|R6 公開前の確認|全要件の確認、負荷、連続再戦、素材台帳、名称・表現の確認|未解決の公開障害を解消し、確認した範囲を明示する|

R1の段階で画面の仮配置を作り、R2から毎回スマートフォンの確認先を出す。操作の問題をR5まで放置しない。R2の敵と仲間は単純な仮行動でもよいが、現物を運ばずに撃つ処理を本番の通常射撃として残さない。

最初の一戦から、運搬、迎撃、侵入、装甲0後の攻防、直接制圧は省かない。単に戦車の数値を減らすミニゲームを作ってから、後で別の遊びを足す計画にはしない。

各変更に目的、該当要件、変更しない条件、検査結果、実機で確認する操作、残件を添える。検査を通すために期待値だけを都合よく変更した場合は、修正完了と扱わない。

## 17. 公開前の権利・由来確認

素材ごとに識別番号、用途、作成者、作成日、入手元、許諾・使用条件、加工内容、AI生成時の指示、確認者、確認日を残す。外部フォントやコードも対象にする。生成記録があるだけで安全と認定せず、実際の見た目や音も確認する。

公開する画面、タイトル、ロゴ、説明文、画像、音を一式で見る。細部を別々に変えていても、全体の組み合わせで特定作品の画面やキャラクターをなぞっていないかを確認する。類似率の数値や「何割変えたか」を非侵害の基準にはしない。

商標の確認では、正式名称が決まってから読み方、見た目、対象となる商品・サービスを調べる。特許の確認では、具体的な操作や情報処理が固まった時点で、対象機能、国・地域、関連する権利の内容・状態を確認する。本書はその調査結果を持っていない。

素材台帳、公開表示、外部ライブラリの使用条件、未解決事項をまとめた確認記録を残す。疑義が解消していない項目がある場合、該当素材や公開を差し止める。ユーザーへ不確実性を隠したまま、非侵害確認済みと表示しない。

## 18. 引き継ぎと変更管理

`AI_HANDOFF.md`を入口にし、本書、要件一覧、初期値、ケース定義、検査計画を一緒に読む。初期値は仮の調整値であり、原作の数値として説明しない。新しい機能を加える場合は、まずどの五つの判断を良くするのかを記録する。

本書に明記した要件よりも、「元の作品ならこうだったはず」という推測を優先しない。元の作品への近似度を高めるためだけに、旧データを再導入しない。独自作品としての要件を変更する場合は、理由、影響する検査、互換性を記録する。

実装先のリポジトリは今回指定されていないため、既存ゲームの変更、新規リポジトリの作成、公開は行っていない。実装開始時は実装先と現在の状態を確認し、mainへ直接変更せず、レビュー可能な取り込み依頼を作る。マージと公開の最終判断はユーザーが行う。

**目標は「元のゲームに似た部品を揃えること」ではない。運ぶ、撃つ、防ぐ、任せる、乗り込む、守り切るという判断を、独自の作品としてつなげることである。**

## 付録A. 調整値の読み方

`INITIAL_RULES.json`は本書の初期値をまとめた設定案で、`ORIGINAL_CASES.json`は8ケースの新規定義である。名称や数値の法的独自性を認定したものではなく、動作済みコードでもない。

タイマーは1秒60更新として整数で保存する。秒を変える場合は関連する更新回数も同時に変える。要件・本文・設定の不一致が起きた場合は一方を黙って採用せず、判断記録を残してそろえる。

この版では、JSONの構造、要件番号の参照、8ケースの内訳、主な数値の一致を資料として点検した。実ゲームの自動検査、実機試遊、商標検索、個別特許調査、完成素材の審査は実施していない。

## 付録B. 根拠資料

外部資料は、制度と実装手段の確認に限って使う。戦闘の具体的な数値や新作の内容は本書の提案である。資料の本文、ゲーム素材、画面写真、音は本書へ転載していない。

**[L01] 文化庁：他人の著作物を利用したい場合など**

アイデア・単なるデータと著作物の区別。他の権利も別途確認する必要。 確認状況：本文を確認。確認日：2026年9月8日。

`https://www.bunka.go.jp/seisaku/chosakuken/seidokaisetsu/chosakukensha_fumei/`

**[L02] 文化庁：AIと著作権 II**

アイデアと表現の区別、AI生成物と既存の創作的表現の関係。 確認状況：検索・本文を確認。PDF物理ページ7と49を画像確認。引用は要約のみ。確認日：2026年9月8日。

`https://www.bunka.go.jp/seisaku/chosakuken/pdf/94097701_02.pdf`

**[L03] 文化庁：著作権、これってOK？NG？**

二次創作やゲーム映像・音楽・キャラクター画像の利用条件。 確認状況：本文を確認。確認日：2026年9月8日。

`https://www.bunka.go.jp/seisaku/chosakuken/taisetsu/point/index.html`

**[L04] 特許庁：商標を検索してみましょう**

名称の読み方を含めた類似検索の案内。個別名称の調査結果ではない。 確認状況：検索抜粋を確認。本文取得は403で失敗。確認日：2026年9月8日。

`https://www.jpo.go.jp/support/startup/shohyo_search.html`

**[L05] 特許庁：コンピュータソフトウエア関連技術の審査基準等について**

ソフトウエア関連発明は著作権と別の特許確認が必要になるという制度上の注意。 確認状況：公式検索結果を確認。個別特許は調査していない。確認日：2026年9月8日。

`https://www.jpo.go.jp/system/laws/rule/guideline/patent/cs_shinsa.html`

**[L06] 経済産業省：不正競争防止法の概要**

周知・著名な表示の扱い。公式関連作と誤認させない公開方針。 確認状況：検索抜粋を確認。本文取得は403で失敗。確認日：2026年9月8日。

`https://www.meti.go.jp/policy/economy/chizai/chiteki/unfaircompetition_new.html`

**[T01] Phaser公式：Phaser Vite TypeScript Template**

表示・開発構成の候補。過去の記事の版番号をそのまま採用しない。 確認状況：公式リポジトリの検索結果を確認。依存関係の導入・動作検証は未実施。確認日：2026年9月8日。

`https://github.com/phaserjs/template-vite-ts`

**[T02] Phaser公式：Input**

マウスとタッチの入力処理に関する公式資料。 確認状況：公式資料の検索結果を確認。確認日：2026年9月8日。

`https://docs.phaser.io/phaser/concepts/input`

**[T03] MDN：Pointer events**

指の識別、入力中断、追跡。 確認状況：本文を確認。確認日：2026年9月8日。

`https://developer.mozilla.org/en-US/docs/Web/API/Pointer_events`

**[T04] MDN：Page Visibility API**

画面非表示と復帰の検出。 確認状況：本文を確認。確認日：2026年9月8日。

`https://developer.mozilla.org/en-US/docs/Web/API/Page_Visibility_API`

**[T05] Playwright公式：Emulation / Browsers**

自動操作と実機検証を区別する。 確認状況：公式資料の検索結果を確認。確認日：2026年9月8日。

`https://playwright.dev/docs/emulation`


## 付録C. 同梱ファイル

|ファイル|用途|
|---|---|
|PRODUCT_REQUIREMENTS.md / .pdf|要件と実装計画の本文|
|REQUIREMENTS.json|42件の要件、完成条件、担当工程|
|INITIAL_RULES.json|独自の初期調整値|
|ORIGINAL_CASES.json|独自ケース8種の機能と初期値|
|ACCEPTANCE_TESTS.json|実施前の検査手順と期待結果|
|RIGHTS_REVIEW.md|権利・由来の確認手順と未実施事項|
|ASSET_REGISTER_TEMPLATE.json|素材を追加する際の由来台帳|
|MIGRATION_NOTES.md|前版から撤回・変更する条件|
|AI_HANDOFF.md|実装担当が最初に読む指示|
|SOURCES.json|参照先と確認範囲|
|DOCUMENT_CHECKS.json|資料ファイル同士の整合性を点検した結果|

